# openai-computer-use-skills

./: README.md  cua_code_mode_py_async.py  cua_computer_loop_mac.py  pyproject.toml
skills/public/computer-use-macos-desktop/: SKILL.md
skills/public/computer-use-macos-desktop/agents/: openai.yaml
skills/public/computer-use-macos-desktop/scripts/: computer_use_macos_desktop.py
skills/public/computer-use-playwright-code/: SKILL.md
skills/public/computer-use-playwright-code/agents/: openai.yaml
skills/public/computer-use-playwright-code/scripts/: computer_use_playwright_code.py
