[project]
name = "computer-use"
version = "0.1.0"
description = "OpenAI computer-use-agent example"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai",
    "pillow>=12.1.1",
    "playwright",
    "pyautogui>=0.9.54",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.14.0",
]

[tool.ruff]
target-version = "py313"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

ignore = ["E501"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"